--- a/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
@@ -1,3 +1,7 @@
+0.1.1 - 2016.10.15
+------------------
+Fixed initial tag for real this time
+
 0.1.0 - 2016.10.15
 ------------------
 Initial Release!
