--- a/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
@@ -1,3 +1,7 @@
+1.1.0 - 2016.11.29
+- [Fix #7] Add images for Containers category.
+- [Fix #9] Sync up DLL's and mod's versions.
+
 0.1.2 - (KSP 1.2.1)
 -------------------
 Recompile for KSP 1.2.1
