--- a/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
@@ -1,3 +1,6 @@
+1.2.1 - 2016.12.12
+- [Change] Recompile for KSP 1.2.2
+
 1.2.0 - 2016.12.2
 - [Enhancement] Define common filters via a config file.
 - [Enhancement] Allow defining custom filters by updating via ModuleManager (read Wiki!).
