--- a/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
@@ -1,3 +1,7 @@
+1.2.2 - 2016.02.04
+------------------
+Added Rovers as a new standard category
+
 1.2.1 - 2016.12.12
 - [Change] Recompile for KSP 1.2.2
 
