--- a/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
@@ -1,5 +1,6 @@
-1.2.2 - 2016.02.04
+2.0.0 - KSP 1.3
 ------------------
+KSP 1.3 Compatibility
 Added Rovers as a new standard category
 
 1.2.1 - 2016.12.12
