--- a/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2.0.2 - KSP 1.3
+------------------
+- [Enhancement] Added a new standard category: Lights.
+
 2.0.1 - KSP 1.3
 ------------------
 - [Fix #20] CCK categories don't show up in the editor.
