--- a/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/CHANGELOG.txt
@@ -1,3 +1,11 @@
+4.0.0 - 2018.10.20
+------------------
+KSP 1.5.0 Compatibility
+
+3.2.0 - 2018.06.22
+------------------
+KSP 1.4.4 Compatibility
+
 3.1.0 - 2018.03.13
 -----------------
 KSP 1.4.1 Compatibility
